--- a/client/package.json
+++ b/client/package.json
@@ -10,10 +10,14 @@
     "body-parser": "^1.19.0",
     "boostrap": "^2.0.0",
     "bootstrap": "^4.4.1",
+    "concurrently": "^5.2.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "google-map-react": "^1.1.7",
     "google-maps-react": "^2.0.2",
     "jquery": "^3.4.1",
+    "mongo": "^0.1.0",
+    "mongoose": "^5.9.10",
     "mysql": "^2.18.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.0",
